RESOLVED FIXED293153
Fix visionOS build after new model memory attribution changes
https://bugs.webkit.org/show_bug.cgi?id=293153
Summary Fix visionOS build after new model memory attribution changes
Ada Chan
Reported 2025-05-16 15:12:23 PDT
Fix visionOS build after new model memory attribution changes
Attachments
Ada Chan
Comment 1 2025-05-16 15:12:24 PDT
Ada Chan
Comment 2 2025-05-16 15:13:17 PDT
EWS
Comment 3 2025-05-16 16:17:27 PDT
Committed 295039@main (720ae4a24079): <https://commits.webkit.org/295039@main> Reviewed commits have been landed. Closing PR #45518 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.