Fix visionOS build after new model memory attribution changes https://bugs.webkit.org/show_bug.cgi?id=293153 rdar://151484554

Unreviewed build fix

* Source/WebKit/ModelProcess/cocoa/ModelProcessModelPlayerProxy.mm:
(WebKit::ModelProcessModelPlayerProxy::applyEnvironmentMapDataAndRelease):
(WebKit::ModelProcessModelPlayerProxy::applyDefaultIBL):

Canonical link: https://commits.webkit.org/295039@main